@@ -126,5 +126,8 @@ jung.parekh <- c(107, 108, 106, 98, 105, 103, 110, 105, 104,
 ansari.test(ramsay, jung.parekh)
 
 ansari.test(rnorm(10), rnorm(10, 0, 2), conf.int = TRUE)
+
+## try more points - failed in 2.4.1
+ansari.test(rnorm(10), rnorm(10, 0, 2), conf.int = TRUE)
 }
 \keyword{htest}
